# calculator-SPE-project

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  README.md  calculator.cpp  calculator.h  deploy.yml  main.cpp
ansible/: deploy.yml  validate_calculator.yml
include/: factorial_func.h  ln_func.h  power_func.h  sqrt_func.h
src/: factorial_func.cpp  ln_func.cpp  main.cpp  power_func.cpp  sqrt_func.cpp
tests/: test_calculator.cpp  test_factorial.cpp  test_ln.cpp  test_power.cpp  test_sqrt.cpp
